--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,13 +8,35 @@
     tools:context=".MainActivity"
     tools:showIn="@layout/activity_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <LinearLayout
+        android:layout_width="409dp"
+        android:layout_height="673dp"
+        android:gravity="center|top"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
+        <Button
+            android:id="@+id/IncrementButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="IncrementButtonClicked"
+            android:text="@string/increment" />
+
+        <Button
+            android:id="@+id/DecrementButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="DecrementButtonClicked"
+            android:text="@string/decrement"
+            android:textSize="14sp" />
+
+        <TextView
+            android:id="@+id/CounterView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="30sp" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
